[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"
version = "0.1.0"

[dependencies]
panic-halt = "~0.2"
microbit="~0.7"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
cortex-m-semihosting = "0.3.5"
nb = "0.1.2"
embedded-hal = "0.2.3"

# this lets you use `cargo fix`!
[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
